fix 2 problème avec le load des custom modules